--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
-/* .App {
+.format {
   margin: 100px auto;
   width: 75%;
-} */
+  background-color: #e5f3ed;
+}
 
 .about {
   width: 90%;
-  margin-left: 30px;
+  padding: 30px;
 }
+
 
 .main-pic img{
   float: left;
@@ -33,12 +35,12 @@
   flex-wrap: wrap;
   min-width: 300px;
   /* background-color: #638bb3; */
-
 }
 
 #test {
   margin-top: 100px;
   display: flex;
+  flex-direction: row;
   margin-left: 30px;
 }
 
@@ -54,13 +56,14 @@
   height: 300px;
   padding: 35px;
 
-  border: 1px solid rgba(8, 34, 19, 0.25);
+  border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 20px;
-  background-color: rgba(8, 34, 19, 0.45);
+  background-color: rgba(255, 255, 255, 0.45);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 
   backdrop-filter: blur(15px);
-  margin: 30px;
+  margin-top: 0;
+  margin: 50px;
 
 }
 
@@ -76,13 +79,19 @@
 }
 
 .header {
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  width: 100vw;
   display: flex;
-  flex-direction: row;
+  position: fixed;
   align-items: center;
-  justify-content: space-between;
-  background-color: black;
+  top: 0px;
+  width: 100vw;
+  background-color: #082213;
+  z-index: 1;
 }
+
+/* .header img {
+  height: 20%;
+  width: 20%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+} */
