added more decoration

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   margin: 100px auto;
   width: 75%;
   background-color: #e5f3ed;
+  border-radius: 15px;
+  /* border: #082213;
+  border-style: solid;
+  border-width: thin; */
+  box-shadow: 0 0 10px 1px rgba(8, 34, 19, 0.25);
 }
 
 .about {
@@ -37,15 +42,16 @@
   /* background-color: #638bb3; */
 }
 
-#test {
+#title-placement {
   margin-top: 100px;
   display: flex;
   flex-direction: row;
   margin-left: 30px;
 }
 
-#test p {
+#title-placement p {
   font-size: 36px;
+  color: #002A00;
 }
 
 .card {
