added new pictures

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   width: 200px;
   height: 200px;
   margin-right: 20px;
+  object-fit: cover;
 
   position: relative;
   overflow: hidden;
@@ -55,7 +56,7 @@
 }
 
 .card {
-  min-width: 300px;
+  width: 300px;
   display: flex;
   flex-direction: column;
 
@@ -74,9 +75,10 @@
 }
 
 .proj-img {
-  display: block;
-  height: 75%;
+  justify-content: center;
+  height: 70%;
   margin: auto;
+  margin-bottom: 10px;
 }
 
 .proj-title {
@@ -87,20 +89,24 @@
 .header {
   display: flex;
   position: fixed;
+  transition: opacity 2s ease-in;
   align-items: center;
   top: 0px;
   width: 100vw;
   background-color: #082213;
   z-index: 1;
-}
 
-/* .header img {
-  height: 20%;
-  width: 20%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-} */
+  p {
+    color: white;
+    padding-left: 10px;
+  }
+
+  img {
+    float: left;
+    height: 50px;
+    width: 50px;
+  }
+}
 
 .start {
   height: 100vh;
