--- a/src/App.css
+++ b/src/App.css
@@ -71,10 +71,13 @@
 }
 
 .proj-img {
+  margin-top: 40px;
   justify-content: center;
   height: 70%;
   margin: auto;
-  margin-bottom: 10px;
+  border-style: solid;
+  border-width: thin;
+  border-color: #002A00;
 }
 
 .proj-title {
