--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+h1 {
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+
+}
+
+p {
+  font-family: "Figtree", sans-serif;
+}
+
 .format {
   margin: 100px auto;
   width: 75%;
@@ -10,7 +20,7 @@
 }
 
 .about {
-  width: 90%;
+  /* width: 90%; */
   padding: 30px;
 }
 
@@ -29,8 +39,8 @@
 }
 
 .paragraph h1 {
-  font-size: 50px;
-  padding: 5px;
+  font-size: 70px;
+  /* padding: 5px; */
   color: #082213;
 }
 
@@ -48,8 +58,9 @@
 }
 
 #title-placement p {
-  font-size: 50px;
+  font-size: 45px;
   color: #002A00;
+  font-style: italic;
 }
 
 .card {
