--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,7 @@ p {
 #card-holder {
   display: flex;
   flex-wrap: wrap;
-  /* min-width: 300px; */
-  /* background-color: #638bb3; */
+  min-width: 300px;
 }
 
 #title-placement {
@@ -58,9 +57,9 @@ p {
 }
 
 #title-placement p {
-  font-size: 45px;
+  font-size: 50px;
   color: #002A00;
-  font-style: italic;
+  font-style: bold;
 }
 
 .card {
@@ -79,10 +78,12 @@ p {
   backdrop-filter: blur(15px);
   margin: 40px;
 
+  justify-content: center;
+
 }
 
 .proj-img {
-  margin-top: 40px;
+  display: flex;
   justify-content: center;
   height: 70%;
   margin: auto;
