--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@ code {
 
 a {
   text-decoration: none;
-  color: #436E43;
+  color: #69a0c9;
 }
 
 a:hover {
-  color: #002A00;
+  color: #0e4773;
 }
 
 a:visited {
