--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 h1 {
   font-family: "Pacifico", cursive;
   font-weight: 400;
-
 }
 
 p {
@@ -11,7 +10,7 @@ p {
 .format {
   margin: 100px auto;
   width: 75%;
-  background-color: #e5f3ed;
+  background-color: #c6e2f7;
   border-radius: 15px;
   /* border: #082213;
   border-style: solid;
@@ -24,7 +23,7 @@ p {
   padding: 30px;
 }
 
-.main-pic img{
+.main-pic img {
   float: left;
   width: 200px;
   height: 200px;
@@ -33,7 +32,7 @@ p {
 
   position: relative;
   overflow: hidden;
-  border: #082213;
+  border: #0e4773;
   border-radius: 50%;
   border-style: solid;
 }
@@ -41,13 +40,15 @@ p {
 .paragraph h1 {
   font-size: 70px;
   /* padding: 5px; */
-  color: #082213;
+  color: #0e4773;
 }
 
 #card-holder {
   display: flex;
   flex-wrap: wrap;
   min-width: 300px;
+  padding: 30px;
+  gap: 30px;
 }
 
 #title-placement {
@@ -58,44 +59,74 @@ p {
 
 #title-placement h2 {
   font-size: 50px;
-  color: #002A00;
+  color: #0e4773;
   font-style: bold;
 }
 
 .card {
-  width: 300px;
+  width: 190px;
+  height: 254px;
+  background: #f5f5f5;
+  border-radius: 10px;
+  padding: 2rem 1.5rem;
+  transition: box-shadow .3s ease, transform .2s ease;
+}
+
+.card-info {
   display: flex;
   flex-direction: column;
-
-  height: 300px;
-  padding: 35px;
-
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.45);
-  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
-
-  backdrop-filter: blur(15px);
-  margin: 40px;
-
   justify-content: center;
-
+  align-items: center;
+  transition: transform .2s ease, opacity .2s ease;
 }
 
 .proj-img {
-  display: flex;
-  justify-content: center;
-  height: 70%;
-  margin: auto;
-  border-style: solid;
-  border-width: thin;
-  border-color: #002A00;
+  --size: 100px;
+  background: linear-gradient(to top, #f1e1c1 0%, #fcbc97 100%);
+  width: var(--size);
+  height: var(--size);
+  border-radius: 50%;
+  transition: transform .2s ease;
+  margin-bottom: 1rem;
 }
 
 .proj-title {
-  text-align: center;
-  font-size: 24px;
+  color: #333;
+  font-size: 1.5em;
+  font-weight: 600;
+  line-height: 2rem;
 }
+
+.proj-subtitle {
+  color: #859ba8;
+  font-size: 0.8em;
+}
+
+.link {
+  transform: translateY(200%);
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  opacity: 0;
+  transition: transform .2s ease, opacity .2s ease;
+}
+
+.card:hover {
+  box-shadow: 0 8px 50px #23232333;
+}
+
+.card:hover .card-info {
+  transform: translateY(-5%);
+}
+
+.proj-img:hover {
+  transform: scale(1.1);
+}
+
+.card:hover .link {
+  transform: translateY(100%);
+  opacity: 1;
+ }
 
 .header {
   display: flex;
@@ -105,7 +136,7 @@ p {
   align-items: center;
   top: 0px;
   width: 100vw;
-  background-color: #082213;
+  background-color: #4ca150;
   z-index: 1;
 
   p {
@@ -137,18 +168,19 @@ p {
   align-items: center;
   position: relative;
   scroll-snap-align: center;
+  background-color: #98d99b;
 
   h1 {
     color: white;
   }
 
-  img {
+  /* img {
     position: relative;
     object-fit: cover;
     object-position: center;
     width: 100%;
     height: 100%;
-  }
+  } */
 
   .copy {
     h1 {
@@ -170,3 +202,87 @@ p {
     scroll-snap-type: y mandatory;
   }
 }
+
+.card-content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.999s;
+}
+
+
+.flip-card {
+  perspective: 1000px;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+
+.flip-card.flipped {
+  transform: rotateY(180deg);
+}
+
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  /* background-color: #6A2C70;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  border: 10px solid #6A2C70;
+  border-radius: 10px;
+  justify-content: center;
+  font-size: 24px; */
+  transform: rotateY(0deg);
+}
+
+.card-back {
+  /* background-color: #F08A5D;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  border: 10px solid #F08A5D;
+  border-radius: 10px;
+  justify-content: center;
+  font-size: 24px; */
+  transform: rotateY(180deg);
+}
+
+
+.testing {
+  position: relative;
+}
+
+.testing2 {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
+/* .card {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+
+  height: 300px;
+  padding: 35px;
+
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+
+  backdrop-filter: blur(15px);
+  margin: 40px;
+
+  justify-content: center;
+
+} */
